--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="shortcut icon" href="assets/img/Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/Logo.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -142,26 +142,27 @@
                 </svg>
               </a>
               <a
-                href="#"
+                href="assets/files/CURRICULUM VITAE_English.pdf"
+                download="CV_Jalalul.pdf"
                 class="inline-flex items-center gap-x-2 justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100"
               >
                 <svg
-                  class="size-5"
-                  xmlns="http://www.w3.org/2000/svg"
+                class="size-5"
                   id="Layer_1"
-                  data-name="Layer 1"
+                  height="512"
                   viewBox="0 0 24 24"
+                  width="512"
+                  xmlns="http://www.w3.org/2000/svg"
+                  data-name="Layer 1"
                 >
                   <path
-                    d="M21.793,4c-.112-.319-.378-.559-.706-.639-.172-.042-4.257-1.025-9.087-1.025-4.744,0-8.907,.982-9.082,1.024-.333,.08-.601,.323-.712,.646-.049,.143-1.206,3.536-1.206,7.994s1.156,7.852,1.206,7.994c.112,.324,.383,.568,.717,.646,.178,.042,4.42,1.023,9.078,1.023,4.819,0,8.914-.983,9.086-1.025,.33-.08,.596-.322,.708-.643,.049-.141,1.206-3.51,1.206-7.996,0-4.525-1.158-7.86-1.207-8Zm-9.793,.336c3.591,0,6.82,.589,8.067,.848,.069,.241,.156,.561,.247,.949-.56,.591-1.981,2.025-3.959,3.551-1.642,1.267-3.499,2.381-4.355,2.875-.856-.494-2.71-1.606-4.356-2.876-1.973-1.521-3.39-2.951-3.954-3.545,.091-.388,.177-.71,.246-.953,1.264-.259,4.527-.849,8.064-.849Zm8.064,14.479c-1.251,.26-4.483,.848-8.064,.848-3.472,0-6.785-.593-8.066-.852-.304-1.072-.934-3.668-.934-6.812,0-1.265,.103-2.444,.246-3.471,.77,.742,1.851,1.716,3.177,2.739,2.338,1.804,4.986,3.258,5.098,3.319,.15,.082,.315,.123,.48,.123s.33-.041,.479-.123c.112-.061,2.76-1.515,5.098-3.319,1.329-1.025,2.411-2.001,3.182-2.743,.14,1.021,.241,2.198,.241,3.475,0,3.152-.631,5.748-.936,6.815Z"
+                    d="m17 14a1 1 0 0 1 -1 1h-8a1 1 0 0 1 0-2h8a1 1 0 0 1 1 1zm-4 3h-5a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2zm9-6.515v8.515a5.006 5.006 0 0 1 -5 5h-10a5.006 5.006 0 0 1 -5-5v-14a5.006 5.006 0 0 1 5-5h4.515a6.958 6.958 0 0 1 4.95 2.05l3.484 3.486a6.951 6.951 0 0 1 2.051 4.949zm-6.949-7.021a5.01 5.01 0 0 0 -1.051-.78v4.316a1 1 0 0 0 1 1h4.316a4.983 4.983 0 0 0 -.781-1.05zm4.949 7.021c0-.165-.032-.323-.047-.485h-4.953a3 3 0 0 1 -3-3v-4.953c-.162-.015-.321-.047-.485-.047h-4.515a3 3 0 0 0 -3 3v14a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3z"
                   />
                 </svg>
-                <span>Send Email</span>
+                <span>Download CV</span>
               </a>
             </div>
-            <div
-              class="bg-rose-100 rounded-md mt-32 grid grid-cols-3"
-            >
+            <div class="bg-rose-100 rounded-md mt-32 grid grid-cols-3">
               <div class="col-span-1 p-5">
                 <h2>X1</h2>
               </div>
@@ -175,7 +176,11 @@
           </div>
           <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
             <div class="bg-white rounded-xl shadow-md">
-              <img class="w-lg rounded-lg" src="assets/img/Foto.png" alt="Foto Profil" />
+              <img
+                class="w-lg rounded-lg"
+                src="assets/img/Foto.png"
+                alt="Foto Profil"
+              />
             </div>
           </div>
         </div>
